# HoareLogicTypeCheckerRust

./: .gitignore  README.md  RustVerifier.opam  dune-project
lib/: dune
lib/parser/: ast.ml  dune  lexer.mll  parser.mly
lib/verifier/: dune  environment.ml  error.ml  typecheck.ml
rust-examples/invalid/: borrow-after-already-borrowed.rs  borrow-after-move.rs  borrow-with-invalid-mutability.rs  mut-borrow.rs  undefined-variable.rs
rust-examples/valid/: reborrows.rs
test/: dune  test_environment.ml  test_frontend.ml
